Staff list update

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@
 !.gitignore
 !*blocks
 !*blocks/ezee_report
-!*blocks/ezee_report/*
+!*blocks/ezee_report/**
 !*blocks/ezee_staff
-!*blocks/ezee_staff/*
+!*blocks/ezee_staff/**
 !*local
 !*local/message
-!*local/message/*
+!*local/message/**
