--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Ignore everything
-*
+
 
 # But not these files...
 !README.md
@@ -8,3 +8,5 @@
 !*moodle/blocks
 !*moodle/blocks/ezee_constellate
 !*moodle/blocks/ezee_constellate/**
+!*ezee_constellate
+!*ezee_constellate/**
